--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ ol, ul {
 	list-style: none;
 }
 
+/* Splash Page Styling */
 .splash-container{
   background: #0D0106;
   grid-column: 3 / 5;
@@ -51,18 +52,40 @@ ol, ul {
   border: 3px double #5C0029;
   color: #BFB48F;
   font-size: 12pt;
-  margin: 5px;
 }
 
 .template-list-item:nth-child(even){
   border: 3px double #605B56;
   color: #BFB48F;
   font-size: 12pt;
-  margin: 5px;
 }
 
 .template-list-item:hover{
   cursor: pointer;
   border: 3px solid #F06543;
   font-size: 13pt;
+}
+
+/* NavBar Styling */
+.nav-bar-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-row: 0 / 2;
+  grid-column: 3 / 8;
+}
+
+.nav-link{
+  color: #605B56;
+  font-size: 16pt;
+  text-decoration-line: none;
+  margin: 10px;
+}
+
+.nav-link:visited{
+  color: #0D0106;
+}
+
+.nav-link:hover{
+  color: #BFB48F;
+  cursor: pointer;
 }
