--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ ol, ul {
   grid-column: 3 / 5;
   grid-row: 4;
   opacity: 0.8;
+  border-radius: 8px;
 }
 
 .splash-box{
@@ -39,6 +40,7 @@ ol, ul {
   border: 3px double #605B56;
   grid-column: 3 / 6;
   font-family: 'Indie Flower', cursive;
+  border-radius: 4px;
 }
 
 .splash-text{
@@ -59,6 +61,7 @@ ol, ul {
   font-size: 14pt;
   margin: 5px;
   font-family: 'Indie Flower', cursive;
+  border-radius: 4px;
 }
 
 .template-list-item:nth-child(even){
@@ -67,10 +70,12 @@ ol, ul {
   font-size: 14pt;
   margin: 5px;
   font-family: 'Indie Flower', cursive;
+  border-radius: 4px;
 }
 
 .template-list-item:hover{
   border: 3px solid #F06543;
+  border-radius: 4px;
 }
 
 .splash-link{
@@ -125,6 +130,7 @@ ol, ul {
   grid-column: 3 / 5;
   grid-row: 4;
   opacity: 0.8;
+  border-radius: 8px;
 }
 
 .login-header{
@@ -139,7 +145,7 @@ ol, ul {
 
 .login-form{
   display: grid;
-  grid-template-columns: 3fr 2fr 3fr;
+  grid-template-columns: 3fr 1fr 1fr 3fr;
   grid-row-start: 2;
   grid-column: 2 / 8;
 }
@@ -152,15 +158,17 @@ ol, ul {
   border: 3px double #605B56;
   margin-bottom: 5px;
   padding: 10px;
+  border-radius: 4px;
 }
 
 .login-input{
-  grid-column: 3;
+  grid-column: 4;
   font-size: 14pt;
   font-family: 'Indie Flower', cursive;
   color: #0D0106;
   border: 3px double #605B56;
   margin-bottom: 5px;
+  border-radius: 4px;
 }
 
 .login-btn{
@@ -168,14 +176,40 @@ ol, ul {
   background-color: #5C0029;
   box-shadow: none;
   border: none;
-  grid-column: 1 / 4;
+  grid-column: 3 / 5;
   padding: 10px;
   margin-bottom: 20px;
+  margin-left: 10px;
   font-size: 14pt;
   font-family: 'Indie Flower', cursive;
+  border-radius: 4px;
 }
 
 .login-btn:hover{
   cursor: pointer;
   background-color: #7E224A;
+}
+
+.login-link{
+  color: #BFB48F;
+  background-color: #5C0029;
+  box-shadow: none;
+  border: none;
+  grid-column: 1 / 3;
+  padding: 10px;
+  margin-bottom: 20px;
+  font-size: 14pt;
+  font-family: 'Indie Flower', cursive;
+  text-decoration: none;
+  border-radius: 4px;
+}
+
+.login-link:hover{
+  cursor: pointer;
+  background-color: #7E224A;
+}
+
+.login-link:visited{
+  color: #BFB48F;
+  text-decoration: none;
 }
