--- a/src/index.css
+++ b/src/index.css
@@ -121,8 +121,8 @@ ol, ul {
   cursor: pointer;
 }
 
-/* Login Form Styling */
-.login-container{
+/* Form Styling */
+.form-container{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 3fr;
@@ -133,7 +133,7 @@ ol, ul {
   border-radius: 8px;
 }
 
-.login-header{
+.form-header{
   grid-row: 1 / 2;
   grid-column: 2 / 8;
   font-family: 'Indie Flower', cursive;
@@ -143,14 +143,14 @@ ol, ul {
   border: 3px double #605B56;
 }
 
-.login-form{
+.form-form{
   display: grid;
   grid-template-columns: 3fr 1fr 1fr 3fr;
   grid-row-start: 2;
   grid-column: 2 / 8;
 }
 
-.login-label{
+.form-label{
   grid-column: 1 / 2;
   font-size: 14pt;
   font-family: 'Indie Flower', cursive;
@@ -161,7 +161,7 @@ ol, ul {
   border-radius: 4px;
 }
 
-.login-input{
+.form-input{
   grid-column: 4;
   font-size: 14pt;
   font-family: 'Indie Flower', cursive;
@@ -171,7 +171,7 @@ ol, ul {
   border-radius: 4px;
 }
 
-.login-btn{
+.form-btn{
   color: #BFB48F;
   background-color: #5C0029;
   box-shadow: none;
@@ -185,12 +185,12 @@ ol, ul {
   border-radius: 4px;
 }
 
-.login-btn:hover{
+.form-btn:hover{
   cursor: pointer;
   background-color: #7E224A;
 }
 
-.login-link{
+.form-link{
   color: #BFB48F;
   background-color: #5C0029;
   box-shadow: none;
@@ -204,12 +204,12 @@ ol, ul {
   border-radius: 4px;
 }
 
-.login-link:hover{
+.form-link:hover{
   cursor: pointer;
   background-color: #7E224A;
 }
 
-.login-link:visited{
+.form-link:visited{
   color: #BFB48F;
   text-decoration: none;
 }
