--- a/src/index.css
+++ b/src/index.css
@@ -345,26 +345,61 @@ ol, ul {
   grid-row: 4 / 6;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
 }
 
 /* Needs clicker styles */
+.clicker-container{
+  grid-column: 1;
+  grid-row: 1 / 2;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
+.clicker-btn{
+  grid-row: 1;
+  border-radius: 10px;
+  border: 3px double #0D0106;
+  background-color: #7F0799;
+  color: #0D0106;
+  padding: 10px 0px;
+  box-shadow: none;
+  font-family: 'Indie Flower', cursive;
+  font-size: 10pt;
+}
+
+.clicker-btn:focus{
+  outline: #0D0106;
+}
+
+.clicker-btn:hover{
+  cursor: pointer;
+  background-color: #9F29AA;
+  box-shadow: none;
+}
+
+.clicker-counter{
+  font-family: 'Indie Flower', cursive;
+  font-size: 12pt;
+  color: #0D0106;
+}
 
 /* Progress Bar */
 .progress-bar{
-  grid-column: 2;
-  grid-row: span 1;
+  grid-row: 2;
   border: 3px solid #0D0106;
   background-color: #605B56;
+  border-radius: 10px;
 }
 
 /* Clock */
 .clock-container{
   grid-column: 3;
+  grid-row: 1 / 2;
   border: 3px solid #BFB48F;
   background-color: #0D0106;
   display: grid;
-  grid-template-rows: 1fr 3fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
 }
 
 .clock{
